# FastAPICurso

./: .gitignore  pyproject.toml
