[tool.poetry]
name = "fastapicurso"
version = "0.1.0"
description = ""
authors = ["Miguel Henriques <github@jmh.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.26.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
